deploy: f324f7a4d57501d331dcfdaa3f2dcd391b873a86

--- a/about/index.html
+++ b/about/index.html
@@ -22,11 +22,10 @@
 <div id=sidebar class="col-xs-6 col-sm-4 col-md-3 sidebar-offcanvas">
 <div class=sidebar-content>
 <h1 class=sidebar-heading><a href=https://jtrmal.github.io/spoolz/>Database of filament spools info</a></h1>
-<p class=sidebar-p>I am a creative illustrator and graphic designer with more than 10 years of experience.</p>
-<p class=sidebar-p>Originally from Toronto, currently based in London.</p>
+<p class=sidebar-p>OnlySpoolz. Unrolled and Unplugged</p>
 <ul class=sidebar-menu>
 <li><a href=https://jtrmal.github.io/spoolz/portfolio/>Home</a></li>
-<li><a href=https://jtrmal.github.io/spoolz/about/>About</a></li>
+<li><a href=https://jtrmal.github.io/spoolz/about/>About and contributing</a></li>
 <li><a href=https://jtrmal.github.io/spoolz/contact/>Get in touch</a></li>
 </ul>
 <p class=social>
@@ -48,17 +47,16 @@ Template by <a href=https://bootstrapious.com/free-templates class=external>Boot
 <div class=row>
 <div class=col-lg-8>
 <div class=content-column-content>
-<h1>About me</h1>
-<p>An sincerity so extremity he additions. Her yet <strong>there truth merit</strong>. Mrs all projecting favourable now unpleasing. Son law garden chatty temper. Oh children provided to mr elegance marriage strongly. Off can admiration prosperous now devonshire diminution law.</p>
-<p>Received overcame oh sensible so at an. Formed do change merely to county it. <strong>Am separate contempt</strong> domestic to to oh. On relation my so addition branched. Put hearing cottage she norland letters equally prepare too. Replied exposed savings he no viewing as up. Soon body add him hill. No father living really people estate if. Mistake do produce beloved demesne if am pursuit.</p>
-<p><img src=/img/about.jpg alt="This is me"></p>
-<p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn&rsquo;t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
-<h4 id=education>Education</h4>
-<ul>
-<li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-<li>Aliquam tincidunt mauris eu risus.</li>
-</ul>
-<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then</p>
+<h1>About</h1>
+<h2 id=why>why?</h2>
+<p>These informations are very useful in cases you need to estimate how much filament is left.</p>
+<h2 id=how-to-contribute>how to contribute?</h2>
+<p>First, let me say we are gratefull for you even considering helping the community.
+Setting time aside in these busy times just for sake of contributing something to
+people you don&rsquo;t know is worth applause.</p>
+<h3 id=tldir-i-know-github-dont-delay-me>tl;dir I know github, don&rsquo;t delay me</h3>
+<p>Create a pull request to the main branch. Your Pull request should
+contain &mldr;</p>
 </div>
 </div>
 </div>
