--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -22,11 +22,10 @@
 <div id=sidebar class="col-xs-6 col-sm-4 col-md-3 sidebar-offcanvas">
 <div class=sidebar-content>
 <h1 class=sidebar-heading><a href=https://jtrmal.github.io/spoolz/>Database of filament spools info</a></h1>
-<p class=sidebar-p>I am a creative illustrator and graphic designer with more than 10 years of experience.</p>
-<p class=sidebar-p>Originally from Toronto, currently based in London.</p>
+<p class=sidebar-p>OnlySpoolz. Unrolled and Unplugged</p>
 <ul class=sidebar-menu>
 <li><a href=https://jtrmal.github.io/spoolz/portfolio/>Home</a></li>
-<li><a href=https://jtrmal.github.io/spoolz/about/>About</a></li>
+<li><a href=https://jtrmal.github.io/spoolz/about/>About and contributing</a></li>
 <li><a href=https://jtrmal.github.io/spoolz/contact/>Get in touch</a></li>
 </ul>
 <p class=social>
@@ -49,14 +48,19 @@ Template by <a href=https://bootstrapious.com/free-templates class=external>Boot
 <div class=row>
 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 masonry-item">
 <div class=box-masonry>
-<a href=https://jtrmal.github.io/spoolz/portfolio/work2/ title class="box-masonry-image with-hover-overlay with-hover-icon">
-<img src=https://jtrmal.github.io/spoolz/img/portfolio/business-card-26.jpg alt class=img-responsive>
+<a href=https://jtrmal.github.io/spoolz/portfolio/spool-esun/ title class="box-masonry-image with-hover-overlay with-hover-icon">
+<img src=https://jtrmal.github.io/spoolz/img/portfolio/esun_pla_plus.jpg alt class=img-responsive>
 </a>
 <div class=box-masonry-text>
-<h4><a href=https://jtrmal.github.io/spoolz/portfolio/work2/>Name of the work 2</a></h4>
+<h4><a href=https://jtrmal.github.io/spoolz/portfolio/spool-esun/>ESun PLA+</a></h4>
 <div class=box-masonry-description>
 <p>
-<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane.</p>
+<ul>
+<li>Printing temp: 205-225</li>
+<li>Bed temp: 0C/60-80C</li>
+<li>Empty spool weight: 238g</li>
+<li>Advertised filament weight: 1000g</li>
+</ul>
 </p>
 </div>
 </div>
@@ -64,143 +68,17 @@ Template by <a href=https://bootstrapious.com/free-templates class=external>Boot
 </div>
 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 masonry-item">
 <div class=box-masonry>
-<a href=https://jtrmal.github.io/spoolz/portfolio/work3/ title class="box-masonry-image with-hover-overlay with-hover-icon">
-<img src=https://jtrmal.github.io/spoolz/img/portfolio/gravity-paper.jpg alt class=img-responsive>
+<a href=https://jtrmal.github.io/spoolz/portfolio/spool-kvp-esun/ title class="box-masonry-image with-hover-overlay with-hover-icon">
+<img src=https://jtrmal.github.io/spoolz/img/portfolio/kvp_koil_adapted_esun.jpg alt class=img-responsive>
 </a>
 <div class=box-masonry-text>
-<h4><a href=https://jtrmal.github.io/spoolz/portfolio/work3/>Name of the work 3</a></h4>
+<h4><a href=https://jtrmal.github.io/spoolz/portfolio/spool-kvp-esun/>KVP Koil Spool</a></h4>
 <div class=box-masonry-description>
 <p>
-<p>Fifth abundantly made Give sixth hath. Cattle creature i be don&rsquo;t them.</p>
-</p>
-</div>
-</div>
-</div>
-</div>
-<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 masonry-item">
-<div class=box-masonry>
-<div class=box-masonry-text>
-<h4><a href=https://jtrmal.github.io/spoolz/portfolio/work4/>Item without image</a></h4>
-<div class=box-masonry-description>
-<p>
-<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-</p>
-</div>
-</div>
-</div>
-</div>
-<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 masonry-item">
-<div class=box-masonry>
-<a href=https://jtrmal.github.io/spoolz/portfolio/work5/ title class="box-masonry-image with-hover-overlay">
-<img src=https://github.com/kishaningithub/hugo-creative-portfolio-theme/raw/master/exampleSite/static/img/portfolio/business-card.jpg alt class=img-responsive>
-</a>
-<div class=box-masonry-hover-text-header>
-<h4><a href=https://jtrmal.github.io/spoolz/portfolio/work5/>Name of the work 5</a></h4>
-<div class=box-masonry-description>
-<p>
-<p>Fifth abundantly made Give sixth hath. Cattle creature i be don&rsquo;t them.</p>
-</p>
-</div>
-</div>
-</div>
-</div>
-<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 masonry-item">
-<div class=box-masonry>
-<div class=box-masonry-text>
-<h4><a href=https://jtrmal.github.io/spoolz/portfolio/work6/>Name of the work 6</a></h4>
-<div class=box-masonry-description>
-<p>
-<p>Fifth abundantly made Give sixth hath. Cattle creature i be don&rsquo;t them.</p>
-</p>
-</div>
-</div>
-</div>
-</div>
-<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 masonry-item">
-<div class=box-masonry>
-<a href=https://jtrmal.github.io/spoolz/portfolio/work7/ title class="box-masonry-image with-hover-overlay with-hover-icon">
-<img src=https://jtrmal.github.io/spoolz/img/portfolio/label-clothes.jpg alt class=img-responsive>
-</a>
-<div class=box-masonry-text>
-<h4><a href=https://jtrmal.github.io/spoolz/portfolio/work7/>Name of the work 7</a></h4>
-<div class=box-masonry-description>
-<p>
-<p>Fifth abundantly made Give sixth hath. Cattle creature i be don&rsquo;t them.</p>
-</p>
-</div>
-</div>
-</div>
-</div>
-<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 masonry-item">
-<div class=box-masonry>
-<a href=https://jtrmal.github.io/spoolz/portfolio/work8/ title class="box-masonry-image with-hover-overlay with-hover-icon">
-<img src=https://jtrmal.github.io/spoolz/img/portfolio/ipad-air-2.jpg alt class=img-responsive>
-</a>
-<div class=box-masonry-text>
-<h4><a href=https://jtrmal.github.io/spoolz/portfolio/work8/>Name of the work 8</a></h4>
-<div class=box-masonry-description>
-<p>
-<p>Fifth abundantly made Give sixth hath. Cattle creature i be don&rsquo;t them.</p>
-</p>
-</div>
-</div>
-</div>
-</div>
-<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 masonry-item">
-<div class=box-masonry>
-<a href=https://jtrmal.github.io/spoolz/portfolio/work9/ title class="box-masonry-image with-hover-overlay with-hover-icon">
-<img src=https://jtrmal.github.io/spoolz/img/portfolio/envelope-brand.jpg alt class=img-responsive>
-</a>
-<div class=box-masonry-text>
-<h4><a href=https://jtrmal.github.io/spoolz/portfolio/work9/>Item with image</a></h4>
-<div class=box-masonry-description>
-<p>
-<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-</p>
-</div>
-</div>
-</div>
-</div>
-<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 masonry-item">
-<div class=box-masonry>
-<a href=https://jtrmal.github.io/spoolz/portfolio/work10/ title class="box-masonry-image with-hover-overlay">
-<img src=https://jtrmal.github.io/spoolz/img/portfolio/trifold.jpg alt class=img-responsive>
-</a>
-<div class=box-masonry-hover-text-header>
-<h4><a href=https://jtrmal.github.io/spoolz/portfolio/work10/>Item with image</a></h4>
-<div class=box-masonry-description>
-<p>
-<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-</p>
-</div>
-</div>
-</div>
-</div>
-<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 masonry-item">
-<div class=box-masonry>
-<a href=https://jtrmal.github.io/spoolz/portfolio/work11/ title class="box-masonry-image with-hover-overlay">
-<img src=https://jtrmal.github.io/spoolz/img/portfolio/paper-presentation.jpg alt class=img-responsive>
-</a>
-<div class=box-masonry-hover-text-header>
-<h4><a href=https://jtrmal.github.io/spoolz/portfolio/work11/>Item with image</a></h4>
-<div class=box-masonry-description>
-<p>
-<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-</p>
-</div>
-</div>
-</div>
-</div>
-<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 masonry-item">
-<div class=box-masonry>
-<a href=https://jtrmal.github.io/spoolz/portfolio/work1/ title class="box-masonry-image with-hover-overlay">
-<img src=https://jtrmal.github.io/spoolz/img/portfolio/a4-paper.jpg alt class=img-responsive>
-</a>
-<div class=box-masonry-hover-text-header>
-<h4><a href=https://jtrmal.github.io/spoolz/portfolio/work1/>Name of the work 1</a></h4>
-<div class=box-masonry-description>
-<p>
-<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life. One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+<ul>
+<li>Empty spool weight: 263g</li>
+<li>Advertised filament weight: 1000g</li>
+</ul>
 </p>
 </div>
 </div>
