--- a/404.html
+++ b/404.html
@@ -21,11 +21,10 @@
 <div id=sidebar class="col-xs-6 col-sm-4 col-md-3 sidebar-offcanvas">
 <div class=sidebar-content>
 <h1 class=sidebar-heading><a href=https://jtrmal.github.io/spoolz/>Database of filament spools info</a></h1>
-<p class=sidebar-p>I am a creative illustrator and graphic designer with more than 10 years of experience.</p>
-<p class=sidebar-p>Originally from Toronto, currently based in London.</p>
+<p class=sidebar-p>OnlySpoolz. Unrolled and Unplugged</p>
 <ul class=sidebar-menu>
 <li><a href=https://jtrmal.github.io/spoolz/portfolio/>Home</a></li>
-<li><a href=https://jtrmal.github.io/spoolz/about/>About</a></li>
+<li><a href=https://jtrmal.github.io/spoolz/about/>About and contributing</a></li>
 <li><a href=https://jtrmal.github.io/spoolz/contact/>Get in touch</a></li>
 </ul>
 <p class=social>
