--- a/portfolio/spool-esun/index.html
+++ b/portfolio/spool-esun/index.html
@@ -21,11 +21,10 @@
 <div id=sidebar class="col-xs-6 col-sm-4 col-md-3 sidebar-offcanvas">
 <div class=sidebar-content>
 <h1 class=sidebar-heading><a href=https://jtrmal.github.io/spoolz/>Database of filament spools info</a></h1>
-<p class=sidebar-p>I am a creative illustrator and graphic designer with more than 10 years of experience.</p>
-<p class=sidebar-p>Originally from Toronto, currently based in London.</p>
+<p class=sidebar-p>OnlySpoolz. Unrolled and Unplugged</p>
 <ul class=sidebar-menu>
 <li><a href=https://jtrmal.github.io/spoolz/portfolio/>Home</a></li>
-<li><a href=https://jtrmal.github.io/spoolz/about/>About</a></li>
+<li><a href=https://jtrmal.github.io/spoolz/about/>About and contributing</a></li>
 <li><a href=https://jtrmal.github.io/spoolz/contact/>Get in touch</a></li>
 </ul>
 <p class=social>
@@ -47,25 +46,13 @@ Template by <a href=https://bootstrapious.com/free-templates class=external>Boot
 <div class=row>
 <div class=col-lg-8>
 <div class=content-column-content>
-<h1>Name of the work 1</h1>
-<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life. One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-<ol>
-<li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-<li>Aliquam tincidunt mauris eu risus.</li>
-</ol>
-<blockquote>
-<p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn&rsquo;t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
-</blockquote>
-<h2 id=header-level-2>Header Level 2</h2>
-<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-<p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn&rsquo;t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
+<h1>ESun PLA+</h1>
 <ul>
-<li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-<li>Aliquam tincidunt mauris eu risus.</li>
+<li>Printing temp: 205-225</li>
+<li>Bed temp: 0C/60-80C</li>
+<li>Empty spool weight: 238g</li>
+<li>Advertised filament weight: 1000g</li>
 </ul>
-<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then</p>
 </div>
 </div>
 </div>
