deploy: bd819b4722aff32377ea3a825169ab2f0315c2eb

--- a/about/index.html
+++ b/about/index.html
@@ -29,6 +29,9 @@
 <li><a href=https://jtrmal.github.io/spoolz/contact/>Get in touch</a></li>
 </ul>
 <p class=social>
+<a href=https://jtrmal.github.io/spoolz data-animate-hover=pulse class=external>
+<i class="fa fa-github"></i>
+</a>
 </p>
 <div class=copyright>
 <p class=credit>
@@ -55,8 +58,22 @@ Template by <a href=https://bootstrapious.com/free-templates class=external>Boot
 Setting time aside in these busy times just for sake of contributing something to
 people you don&rsquo;t know is worth applause.</p>
 <h3 id=tldir-i-know-github-dont-delay-me>tl;dir I know github, don&rsquo;t delay me</h3>
-<p>Create a pull request to the main branch. Your Pull request should
-contain &mldr;</p>
+<p>Create a pull request to the main branch of the repo <a href=https://jtrmal.github.io/spoolz>https://jtrmal.github.io/spoolz</a>
+Your Pull request should contain two files:</p>
+<ul>
+<li>jpeg photo of the spool in spoolz-photos/</li>
+<li>description of the spool in spoolz-text/. Use one of the existing
+files as a template and rename it. The filename is not very important
+but try to make it self-explanatory. Inside the file, change the
+fields
+<ul>
+<li>title (identification of the spool)</li>
+<li>image (retain the path and add modify the filename itself)</li>
+<li>add text/info after the characters &lsquo;+++&rsquo;</li>
+</ul>
+</li>
+<li>that&rsquo;s it!</li>
+</ul>
 </div>
 </div>
 </div>
