--- a/contact/index.html
+++ b/contact/index.html
@@ -29,6 +29,9 @@
 <li><a href=https://jtrmal.github.io/spoolz/contact/>Get in touch</a></li>
 </ul>
 <p class=social>
+<a href=https://jtrmal.github.io/spoolz data-animate-hover=pulse class=external>
+<i class="fa fa-github"></i>
+</a>
 </p>
 <div class=copyright>
 <p class=credit>
@@ -48,11 +51,11 @@ Template by <a href=https://bootstrapious.com/free-templates class=external>Boot
 <div class=col-lg-8>
 <div class=content-column-content>
 <h1>Get in touch</h1>
-<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then</p>
-<p>Effects present letters inquiry no an removed or friends. Desire behind latter me though in. Supposing shameless am he engrossed up additions. My possible peculiar together to. Desire so better am cannot he up before points. Remember mistaken opinions it pleasure of debating. Court front maids forty if aware their at. Chicken use are pressed removed.</p>
-<p>Able an hope of body. Any nay shyness article matters own removal nothing his forming. Gay own additions education satisfied the perpetual. If he cause manor happy. Without farther she exposed saw man led. Along on happy could cease green oh.</p>
 <h4>You can find me also on:</h4>
 <p class="social social--big">
+<a href=https://jtrmal.github.io/spoolz>
+<i class="fa fa-github"></i>
+</a>
 </p>
 <h4>Drop me a line, maybe?</h4>
 <form id=contact-form class="contact-form form" method=post action=https://formspree.io/yenda@trmal.net>
