deploy: b30ca35658c4fd60bb932a3acf3ae8f9e213133b

--- a/about/index.html
+++ b/about/index.html
@@ -29,7 +29,7 @@
 <li><a href=https://jtrmal.github.io/spoolz/contact/>Get in touch</a></li>
 </ul>
 <p class=social>
-<a href=https://jtrmal.github.io/spoolz data-animate-hover=pulse class=external>
+<a href=https://github.com/jtrmal/spoolz data-animate-hover=pulse class=external>
 <i class="fa fa-github"></i>
 </a>
 </p>
@@ -58,7 +58,7 @@ Template by <a href=https://bootstrapious.com/free-templates class=external>Boot
 Setting time aside in these busy times just for sake of contributing something to
 people you don&rsquo;t know is worth applause.</p>
 <h3 id=tldir-i-know-github-dont-delay-me>tl;dir I know github, don&rsquo;t delay me</h3>
-<p>Create a pull request to the main branch of the repo <a href=https://jtrmal.github.io/spoolz>https://jtrmal.github.io/spoolz</a>
+<p>Create a pull request to the main branch of the repo <a href=https://github.com/jtrmal/spoolz>https://github.com/jtrmal/spoolz</a>
 Your Pull request should contain two files:</p>
 <ul>
 <li>jpeg photo of the spool in spoolz-photos/</li>
