--- a/contact/index.html
+++ b/contact/index.html
@@ -29,7 +29,7 @@
 <li><a href=https://jtrmal.github.io/spoolz/contact/>Get in touch</a></li>
 </ul>
 <p class=social>
-<a href=https://jtrmal.github.io/spoolz data-animate-hover=pulse class=external>
+<a href=https://github.com/jtrmal/spoolz data-animate-hover=pulse class=external>
 <i class="fa fa-github"></i>
 </a>
 </p>
@@ -53,7 +53,7 @@ Template by <a href=https://bootstrapious.com/free-templates class=external>Boot
 <h1>Get in touch</h1>
 <h4>You can find me also on:</h4>
 <p class="social social--big">
-<a href=https://jtrmal.github.io/spoolz>
+<a href=https://github.com/jtrmal/spoolz>
 <i class="fa fa-github"></i>
 </a>
 </p>
