deploy: 290bb7ec1d818dd6125773e38f90d3000ce50e0b

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -78,6 +78,7 @@ Template by <a href=https://bootstrapious.com/free-templates class=external>Boot
 <h4><a href=https://jtrmal.github.io/spoolz/portfolio/spool-kvp-esun/>KVP Koil Spool</a></h4>
 <div class=box-masonry-description>
 <p>
+<p>ESun openable spool upcycled by KVP to serve as their refillable Koil spool</p>
 <ul>
 <li>Empty spool weight: 263g</li>
 <li>Advertised filament weight: 1000g</li>
