--- a/portfolio/spool-kvp-esun/index.html
+++ b/portfolio/spool-kvp-esun/index.html
@@ -50,6 +50,7 @@ Template by <a href=https://bootstrapious.com/free-templates class=external>Boot
 <div class=col-lg-8>
 <div class=content-column-content>
 <h1>KVP Koil Spool</h1>
+<p>ESun openable spool upcycled by KVP to serve as their refillable Koil spool</p>
 <ul>
 <li>Empty spool weight: 263g</li>
 <li>Advertised filament weight: 1000g</li>
