--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <head>
 <meta name=generator content="Hugo 0.88.1">
-<meta http-equiv=refresh content="0; URL=https://jtrmal.github.io/spoolz/portfolio/">
+<meta http-equiv=refresh content="0; URL=https://www.onlyspoolz.com/portfolio/">
 </head>
