--- a/portfolio/spool-esun/index.html
+++ b/portfolio/spool-esun/index.html
@@ -4,15 +4,15 @@
 <title>Database of filament spools info</title>
 <meta name=description content="Describe your website">
 <meta name=viewport content="width=device-width,initial-scale=1">
-<link rel=stylesheet href=https://jtrmal.github.io/spoolz/css/bootstrap.min.css>
+<link rel=stylesheet href=https://www.onlyspoolz.com/css/bootstrap.min.css>
 <link rel=stylesheet href="//fonts.googleapis.com/css?family=Roboto:400,300,700,400italic">
-<link rel=stylesheet href=https://jtrmal.github.io/spoolz/css/font-awesome.min.css>
-<link rel=stylesheet href=https://jtrmal.github.io/spoolz/css/owl.carousel.css>
-<link rel=stylesheet href=https://jtrmal.github.io/spoolz/css/owl.theme.css>
-<link href=https://jtrmal.github.io/spoolz/css/style.default.css rel=stylesheet id=theme-stylesheet><!--[if lt IE 9]><script src=https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js></script>
+<link rel=stylesheet href=https://www.onlyspoolz.com/css/font-awesome.min.css>
+<link rel=stylesheet href=https://www.onlyspoolz.com/css/owl.carousel.css>
+<link rel=stylesheet href=https://www.onlyspoolz.com/css/owl.theme.css>
+<link href=https://www.onlyspoolz.com/css/style.default.css rel=stylesheet id=theme-stylesheet><!--[if lt IE 9]><script src=https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js></script>
 <script src=https://oss.maxcdn.com/respond/1.4.2/respond.min.js></script><![endif]-->
-<link href=https://jtrmal.github.io/spoolz/css/custom.css rel=stylesheet>
-<link rel="shortcut icon" href=https://jtrmal.github.io/spoolz/img/favicon.png>
+<link href=https://www.onlyspoolz.com/css/custom.css rel=stylesheet>
+<link rel="shortcut icon" href=https://www.onlyspoolz.com/img/favicon.png>
 </head>
 <body>
 <div id=all>
@@ -20,12 +20,12 @@
 <div class="row row-offcanvas row-offcanvas-left">
 <div id=sidebar class="col-xs-6 col-sm-4 col-md-3 sidebar-offcanvas">
 <div class=sidebar-content>
-<h1 class=sidebar-heading><a href=https://jtrmal.github.io/spoolz/>Database of filament spools info</a></h1>
+<h1 class=sidebar-heading><a href=https://www.onlyspoolz.com/>Database of filament spools info</a></h1>
 <p class=sidebar-p>OnlySpoolz. Unrolled and Unplugged</p>
 <ul class=sidebar-menu>
-<li><a href=https://jtrmal.github.io/spoolz/portfolio/>Home</a></li>
-<li><a href=https://jtrmal.github.io/spoolz/about/>About and contributing</a></li>
-<li><a href=https://jtrmal.github.io/spoolz/contact/>Get in touch</a></li>
+<li><a href=https://www.onlyspoolz.com/portfolio/>Home</a></li>
+<li><a href=https://www.onlyspoolz.com/about/>About and contributing</a></li>
+<li><a href=https://www.onlyspoolz.com/contact/>Get in touch</a></li>
 </ul>
 <p class=social>
 <a href=https://github.com/jtrmal/spoolz data-animate-hover=pulse class=external>
@@ -44,7 +44,7 @@ Template by <a href=https://bootstrapious.com/free-templates class=external>Boot
 <div class="col-xs-12 col-sm-8 col-md-9 content-column white-background">
 <div class="small-navbar visible-xs">
 <button type=button data-toggle=offcanvas class="btn btn-ghost pull-left"> <i class="fa fa-align-left"> </i>Menu</button>
-<h1 class=small-navbar-heading><a href=https://jtrmal.github.io/spoolz/>Database of filament spools info</a></h1>
+<h1 class=small-navbar-heading><a href=https://www.onlyspoolz.com/>Database of filament spools info</a></h1>
 </div>
 <div class=row>
 <div class=col-lg-8>
@@ -63,14 +63,14 @@ Template by <a href=https://bootstrapious.com/free-templates class=external>Boot
 </div>
 </div>
 </div>
-<script src=https://jtrmal.github.io/spoolz/js/jquery.min.js></script>
-<script src=https://jtrmal.github.io/spoolz/js/bootstrap.min.js></script>
-<script src=https://jtrmal.github.io/spoolz/js/jquery.cookie.js></script>
-<script src=https://jtrmal.github.io/spoolz/js/ekko-lightbox.js></script>
-<script src=https://jtrmal.github.io/spoolz/js/jquery.scrollTo.min.js></script>
-<script src=https://jtrmal.github.io/spoolz/js/masonry.pkgd.min.js></script>
-<script src=https://jtrmal.github.io/spoolz/js/imagesloaded.pkgd.min.js></script>
-<script src=https://jtrmal.github.io/spoolz/js/owl.carousel.min.js></script>
-<script src=https://jtrmal.github.io/spoolz/js/front.js></script>
+<script src=https://www.onlyspoolz.com/js/jquery.min.js></script>
+<script src=https://www.onlyspoolz.com/js/bootstrap.min.js></script>
+<script src=https://www.onlyspoolz.com/js/jquery.cookie.js></script>
+<script src=https://www.onlyspoolz.com/js/ekko-lightbox.js></script>
+<script src=https://www.onlyspoolz.com/js/jquery.scrollTo.min.js></script>
+<script src=https://www.onlyspoolz.com/js/masonry.pkgd.min.js></script>
+<script src=https://www.onlyspoolz.com/js/imagesloaded.pkgd.min.js></script>
+<script src=https://www.onlyspoolz.com/js/owl.carousel.min.js></script>
+<script src=https://www.onlyspoolz.com/js/front.js></script>
 </body>
 </html>
