deploy: 26908a53027f99e2997eb140b1ee1fd269e5707e

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <head>
 <meta name=generator content="Hugo 0.88.1">
-<meta http-equiv=refresh content="0; URL=https://www.onlyspoolz.com/portfolio/">
+<meta http-equiv=refresh content="0; URL=www.onlyspoolz.com/portfolio/">
 </head>
