deploy: a3aef902904d10d33f3b2965188ba4c80f0c8800

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -88,6 +88,144 @@ Template by <a href=https://bootstrapious.com/free-templates class=external>Boot
 </div>
 </div>
 </div>
+<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 masonry-item">
+<div class=box-masonry>
+<a href=https://jtrmal.github.io/spoolz/portfolio/spool-esun-abs-plus-duc1/ title class="box-masonry-image with-hover-overlay with-hover-icon">
+<img src=https://jtrmal.github.io/spoolz/img/portfolio/esun_abs_plus_black_duc1.jpg alt class=img-responsive>
+</a>
+<div class=box-masonry-text>
+<h4><a href=https://jtrmal.github.io/spoolz/portfolio/spool-esun-abs-plus-duc1/>ESun ABS+ Black</a></h4>
+<div class=box-masonry-description>
+<p>
+<ul>
+<li>Printing temp: 220-260C</li>
+<li>Bed temp: 100C</li>
+<li>Empty spool weight: 209g</li>
+<li>Advertised filament weight: 1000g</li>
+<li>Outside Diameter: 200mm</li>
+<li>Height: 60mm</li>
+<li>Hole Diameter: 51mm</li>
+</ul>
+</p>
+</div>
+</div>
+</div>
+</div>
+<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 masonry-item">
+<div class=box-masonry>
+<a href=https://jtrmal.github.io/spoolz/portfolio/spool-esun-abs-plus-duc2/ title class="box-masonry-image with-hover-overlay with-hover-icon">
+<img src=https://jtrmal.github.io/spoolz/img/portfolio/esun_abs_plus_black_duc2.jpg alt class=img-responsive>
+</a>
+<div class=box-masonry-text>
+<h4><a href=https://jtrmal.github.io/spoolz/portfolio/spool-esun-abs-plus-duc2/>ESun ABS+ Black</a></h4>
+<div class=box-masonry-description>
+<p>
+<ul>
+<li>Printing temp: 220-260C</li>
+<li>Bed temp: 100C</li>
+<li>Empty spool weight: 222g</li>
+<li>Advertised filament weight: 1000g</li>
+<li>Outside Diameter: 200mm</li>
+<li>Height: 61mm</li>
+<li>Hole Diameter: 51mm</li>
+</ul>
+</p>
+</div>
+</div>
+</div>
+</div>
+<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 masonry-item">
+<div class=box-masonry>
+<a href=https://jtrmal.github.io/spoolz/portfolio/spool-kiwi3d-pla-duc1/ title class="box-masonry-image with-hover-overlay with-hover-icon">
+<img src=https://jtrmal.github.io/spoolz/img/portfolio/kiwi3d_pla_likemarble_duc1.jpg alt class=img-responsive>
+</a>
+<div class=box-masonry-text>
+<h4><a href=https://jtrmal.github.io/spoolz/portfolio/spool-kiwi3d-pla-duc1/>Kiwi3D PLA Like-Marble</a></h4>
+<div class=box-masonry-description>
+<p>
+<ul>
+<li>Printing temp: 190-220C</li>
+<li>Bed temp: 0/60C</li>
+<li>Empty spool weight: 194g</li>
+<li>Advertised filament weight: 1000g</li>
+<li>Outside Diameter: 198mm</li>
+<li>Height: 62mm</li>
+<li>Hole Diameter: 60mm</li>
+</ul>
+</p>
+</div>
+</div>
+</div>
+</div>
+<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 masonry-item">
+<div class=box-masonry>
+<a href=https://jtrmal.github.io/spoolz/portfolio/spool-wanhao-pla-duc1/ title class="box-masonry-image with-hover-overlay with-hover-icon">
+<img src=https://jtrmal.github.io/spoolz/img/portfolio/wanhao_pla_grey_duc1.jpg alt class=img-responsive>
+</a>
+<div class=box-masonry-text>
+<h4><a href=https://jtrmal.github.io/spoolz/portfolio/spool-wanhao-pla-duc1/>Wanhao PLA Slate-Grey</a></h4>
+<div class=box-masonry-description>
+<p>
+<ul>
+<li>Printing temp: 170-210C</li>
+<li>Bed temp: 0/60C</li>
+<li>Empty spool weight: 267g</li>
+<li>Advertised filament weight: 1000g</li>
+<li>Outside Diameter: 200mm</li>
+<li>Height: 60mm</li>
+<li>Hole Diameter: 50mm</li>
+</ul>
+</p>
+</div>
+</div>
+</div>
+</div>
+<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 masonry-item">
+<div class=box-masonry>
+<a href=https://jtrmal.github.io/spoolz/portfolio/spool-wanhao-pla-duc2/ title class="box-masonry-image with-hover-overlay with-hover-icon">
+<img src=https://jtrmal.github.io/spoolz/img/portfolio/wanhao_pla_white_duc1.jpg alt class=img-responsive>
+</a>
+<div class=box-masonry-text>
+<h4><a href=https://jtrmal.github.io/spoolz/portfolio/spool-wanhao-pla-duc2/>Wanhao PLA White</a></h4>
+<div class=box-masonry-description>
+<p>
+<ul>
+<li>Printing temp: 170-210C</li>
+<li>Bed temp: 0/60C</li>
+<li>Empty spool weight: 272g</li>
+<li>Advertised filament weight: 1000g</li>
+<li>Outside Diameter: 200mm</li>
+<li>Height: 60mm</li>
+<li>Hole Diameter: 50mm</li>
+</ul>
+</p>
+</div>
+</div>
+</div>
+</div>
+<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 masonry-item">
+<div class=box-masonry>
+<a href=https://jtrmal.github.io/spoolz/portfolio/spool-wanhao-pla-duc3/ title class="box-masonry-image with-hover-overlay with-hover-icon">
+<img src=https://jtrmal.github.io/spoolz/img/portfolio/wanhao_pla_yellow_duc1.jpg alt class=img-responsive>
+</a>
+<div class=box-masonry-text>
+<h4><a href=https://jtrmal.github.io/spoolz/portfolio/spool-wanhao-pla-duc3/>Wanhao PLA Yellow</a></h4>
+<div class=box-masonry-description>
+<p>
+<ul>
+<li>Printing temp: 170-210C</li>
+<li>Bed temp: 0/60C</li>
+<li>Empty spool weight: 270g</li>
+<li>Advertised filament weight: 1000g</li>
+<li>Outside Diameter: 200mm</li>
+<li>Height: 57mm</li>
+<li>Hole Diameter: 50mm</li>
+</ul>
+</p>
+</div>
+</div>
+</div>
+</div>
 </div>
 </div>
 </div>
