deploy: faaa771a045d206432a1ca942ecc0aebbda66ace

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -90,6 +90,111 @@ Template by <a href=https://bootstrapious.com/free-templates class=external>Boot
 </div>
 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 masonry-item">
 <div class=box-masonry>
+<a href=https://www.onlyspoolz.com/portfolio/spool-essentium-10000g/ title class="box-masonry-image with-hover-overlay with-hover-icon">
+<img src=https://www.onlyspoolz.com/img/portfolio/essentium_spool_scheme.png alt class=img-responsive>
+</a>
+<div class=box-masonry-text>
+<h4><a href=https://www.onlyspoolz.com/portfolio/spool-essentium-10000g/>Essentium 10kg spool</a></h4>
+<div class=box-masonry-description>
+<p>
+<ul>
+<li>Empty spool weight: 1385 g</li>
+<li>Advertised filament weight: 10000 g</li>
+<li>Outside Diameter: 355.6 mm</li>
+<li>Height: 222.25 mm</li>
+<li>Hole Diameter: 38.1 mm</li>
+</ul>
+</p>
+</div>
+</div>
+</div>
+</div>
+<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 masonry-item">
+<div class=box-masonry>
+<a href=https://www.onlyspoolz.com/portfolio/spool-essentium-2500g/ title class="box-masonry-image with-hover-overlay with-hover-icon">
+<img src=https://www.onlyspoolz.com/img/portfolio/essentium_spool_scheme.png alt class=img-responsive>
+</a>
+<div class=box-masonry-text>
+<h4><a href=https://www.onlyspoolz.com/portfolio/spool-essentium-2500g/>Essentium 2.5kg spool</a></h4>
+<div class=box-masonry-description>
+<p>
+<ul>
+<li>Empty spool weight: 918 g</li>
+<li>Advertised filament weight: 2500 g</li>
+<li>Outside Diameter: 298.45 mm</li>
+<li>Height: 103.886 mm</li>
+<li>Hole Diameter: 52.07 mm</li>
+</ul>
+</p>
+</div>
+</div>
+</div>
+</div>
+<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 masonry-item">
+<div class=box-masonry>
+<a href=https://www.onlyspoolz.com/portfolio/spool-essentium-200g/ title class="box-masonry-image with-hover-overlay with-hover-icon">
+<img src=https://www.onlyspoolz.com/img/portfolio/essentium_spool_scheme.png alt class=img-responsive>
+</a>
+<div class=box-masonry-text>
+<h4><a href=https://www.onlyspoolz.com/portfolio/spool-essentium-200g/>Essentium 200g spool</a></h4>
+<div class=box-masonry-description>
+<p>
+<ul>
+<li>Empty spool weight: 128g</li>
+<li>Advertised filament weight: 200g</li>
+<li>Outside Diameter: 140.97mm</li>
+<li>Height: 44.45</li>
+<li>Hole Diameter: 52.07mm</li>
+</ul>
+</p>
+</div>
+</div>
+</div>
+</div>
+<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 masonry-item">
+<div class=box-masonry>
+<a href=https://www.onlyspoolz.com/portfolio/spool-essentium-5000g/ title class="box-masonry-image with-hover-overlay with-hover-icon">
+<img src=https://www.onlyspoolz.com/img/portfolio/essentium_spool_scheme.png alt class=img-responsive>
+</a>
+<div class=box-masonry-text>
+<h4><a href=https://www.onlyspoolz.com/portfolio/spool-essentium-5000g/>Essentium 5kg spool</a></h4>
+<div class=box-masonry-description>
+<p>
+<ul>
+<li>Empty spool weight: 1146 g</li>
+<li>Advertised filament weight: 5000 g</li>
+<li>Outside Diameter: 304.8 mm</li>
+<li>Height: 190.5 mm</li>
+<li>Hole Diameter: 52.07 mm</li>
+</ul>
+</p>
+</div>
+</div>
+</div>
+</div>
+<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 masonry-item">
+<div class=box-masonry>
+<a href=https://www.onlyspoolz.com/portfolio/spool-essentium-750g/ title class="box-masonry-image with-hover-overlay with-hover-icon">
+<img src=https://www.onlyspoolz.com/img/portfolio/essentium_spool_scheme.png alt class=img-responsive>
+</a>
+<div class=box-masonry-text>
+<h4><a href=https://www.onlyspoolz.com/portfolio/spool-essentium-750g/>Essentium 750g spool</a></h4>
+<div class=box-masonry-description>
+<p>
+<ul>
+<li>Empty spool weight: 365g</li>
+<li>Advertised filament weight: 750g</li>
+<li>Outside Diameter: 200.025 mm</li>
+<li>Height: 54.61 mm</li>
+<li>Hole Diameter: 52.07 mm</li>
+</ul>
+</p>
+</div>
+</div>
+</div>
+</div>
+<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 masonry-item">
+<div class=box-masonry>
 <a href=https://www.onlyspoolz.com/portfolio/spool-esun-abs-plus-duc1/ title class="box-masonry-image with-hover-overlay with-hover-icon">
 <img src=https://www.onlyspoolz.com/img/portfolio/esun_abs_plus_black_duc1.jpg alt class=img-responsive>
 </a>
