deploy: cbb400dd64147a1e2259984454588a4b3d7b6683

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -51,6 +51,52 @@ Template by <a href=https://bootstrapious.com/free-templates class=external>Boot
 <div class=row>
 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 masonry-item">
 <div class=box-masonry>
+<a href=https://www.onlyspoolz.com/portfolio/spool-fusion_filaments-abs/ title class="box-masonry-image with-hover-overlay with-hover-icon">
+<img src=https://www.onlyspoolz.com/img/portfolio/fusion_filaments.jpg alt class=img-responsive>
+</a>
+<div class=box-masonry-text>
+<h4><a href=https://www.onlyspoolz.com/portfolio/spool-fusion_filaments-abs/>Fusion Filaments Plutonic Purple ABS 2.0</a></h4>
+<div class=box-masonry-description>
+<p>
+<ul>
+<li>Printing temp: 245C</li>
+<li>Bed temp: 90-100 C</li>
+<li>Empty spool weight: 308 g</li>
+<li>Advertised filament weight: 1000 g</li>
+<li>Outside Diameter: 205 mm</li>
+<li>Height: 73/56 mm (inner hole has reduced height)</li>
+<li>Hole Diameter: 53 mm</li>
+</ul>
+</p>
+</div>
+</div>
+</div>
+</div>
+<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 masonry-item">
+<div class=box-masonry>
+<a href=https://www.onlyspoolz.com/portfolio/spool-kvp-abs/ title class="box-masonry-image with-hover-overlay with-hover-icon">
+<img src=https://www.onlyspoolz.com/img/portfolio/kvp_spool.jpg alt class=img-responsive>
+</a>
+<div class=box-masonry-text>
+<h4><a href=https://www.onlyspoolz.com/portfolio/spool-kvp-abs/>KVP Stellar Black ABS</a></h4>
+<div class=box-masonry-description>
+<p>
+<ul>
+<li>Printing temp: 230 C – 250 C</li>
+<li>Bed temp: 110 C</li>
+<li>Empty spool weight: 337 g</li>
+<li>Advertised filament weight: 1000 g</li>
+<li>Outside Diameter: 205 mm</li>
+<li>Height: 72/55 mm (inner hole has reduced height)</li>
+<li>Hole Diameter: 53 mm</li>
+</ul>
+</p>
+</div>
+</div>
+</div>
+</div>
+<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 masonry-item">
+<div class=box-masonry>
 <a href=https://www.onlyspoolz.com/portfolio/spool-atomic-filament-pla/ title class="box-masonry-image with-hover-overlay with-hover-icon">
 <img src=https://www.onlyspoolz.com/img/portfolio/atomic_filament_pla.jpg alt class=img-responsive>
 </a>
