deploy: 7aabbdb54fb707fce99712cf9e89e3fda80fb798

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -51,6 +51,29 @@ Template by <a href=https://bootstrapious.com/free-templates class=external>Boot
 <div class=row>
 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 masonry-item">
 <div class=box-masonry>
+<a href=https://www.onlyspoolz.com/portfolio/spool-eryone-pla/ title class="box-masonry-image with-hover-overlay with-hover-icon">
+<img src=https://www.onlyspoolz.com/img/portfolio/eryone_pla_matt. alt class=img-responsive>
+</a>
+<div class=box-masonry-text>
+<h4><a href=https://www.onlyspoolz.com/portfolio/spool-eryone-pla/>Eryone PLA Matte</a></h4>
+<div class=box-masonry-description>
+<p>
+<ul>
+<li>Printing temp: 190 C – 220 C</li>
+<li>Bed temp: not specified</li>
+<li>Empty spool weight: 186 g</li>
+<li>Advertised filament weight: 1000 g</li>
+<li>Outside Diameter: 200 mm</li>
+<li>Height: 64/52 mm (inner hole has reduced height)</li>
+<li>Hole Diameter: 55 mm</li>
+</ul>
+</p>
+</div>
+</div>
+</div>
+</div>
+<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 masonry-item">
+<div class=box-masonry>
 <a href=https://www.onlyspoolz.com/portfolio/spool-fusion_filaments-abs/ title class="box-masonry-image with-hover-overlay with-hover-icon">
 <img src=https://www.onlyspoolz.com/img/portfolio/fusion_filaments_spool.jpg alt class=img-responsive>
 </a>
