--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -52,7 +52,7 @@ Template by <a href=https://bootstrapious.com/free-templates class=external>Boot
 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 masonry-item">
 <div class=box-masonry>
 <a href=https://www.onlyspoolz.com/portfolio/spool-eryone-pla/ title class="box-masonry-image with-hover-overlay with-hover-icon">
-<img src=https://www.onlyspoolz.com/img/portfolio/eryone_pla_matt. alt class=img-responsive>
+<img src=https://www.onlyspoolz.com/img/portfolio/eryone_pla_matt.jpg alt class=img-responsive>
 </a>
 <div class=box-masonry-text>
 <h4><a href=https://www.onlyspoolz.com/portfolio/spool-eryone-pla/>Eryone PLA Matte</a></h4>
