deploy: 16d47afc54e165b2c3792a15f3086bb7322a62db

--- a/about/index.html
+++ b/about/index.html
@@ -1,94 +1,17 @@
-<!doctype html><html lang=en-us>
-<head><meta charset=utf-8>
-<meta http-equiv=x-ua-compatible content="IE=edge">
-<title>Database of filament spools info</title>
-<meta name=description content="Describe your website">
-<meta name=viewport content="width=device-width,initial-scale=1">
-<link rel=stylesheet href=https://www.onlyspoolz.com/css/bootstrap.min.css>
-<link rel=stylesheet href="//fonts.googleapis.com/css?family=Roboto:400,300,700,400italic">
-<link rel=stylesheet href=https://www.onlyspoolz.com/css/font-awesome.min.css>
-<link rel=stylesheet href=https://www.onlyspoolz.com/css/owl.carousel.css>
-<link rel=stylesheet href=https://www.onlyspoolz.com/css/owl.theme.css>
-<link href=https://www.onlyspoolz.com/css/style.default.css rel=stylesheet id=theme-stylesheet><!--[if lt IE 9]><script src=https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js></script>
-<script src=https://oss.maxcdn.com/respond/1.4.2/respond.min.js></script><![endif]-->
-<link href=https://www.onlyspoolz.com/css/custom.css rel=stylesheet>
-<link rel="shortcut icon" href=https://www.onlyspoolz.com/img/favicon.png>
-<link href=https://www.onlyspoolz.com/about/index.xml rel=alternate type=application/rss+xml title="Database of filament spools info">
-</head>
-<body>
-<div id=all>
-<div class=container-fluid>
-<div class="row row-offcanvas row-offcanvas-left">
-<div id=sidebar class="col-xs-6 col-sm-4 col-md-3 sidebar-offcanvas">
-<div class=sidebar-content>
-<h1 class=sidebar-heading><a href=https://www.onlyspoolz.com/>Database of filament spools info</a></h1>
-<p class=sidebar-p>OnlySpoolz. Unrolled and Unplugged</p>
-<ul class=sidebar-menu>
-<li><a href=https://www.onlyspoolz.com/portfolio/>Home</a></li>
-<li><a href=https://www.onlyspoolz.com/about/>About and contributing</a></li>
-<li><a href=https://www.onlyspoolz.com/contact/>Get in touch</a></li>
-</ul>
-<p class=social>
-<a href=https://github.com/jtrmal/spoolz data-animate-hover=pulse class=external>
-<i class="fa fa-github"></i>
-</a>
-</p>
-<div class=copyright>
-<p class=credit>
-public domain |
+<!doctype html><html lang=en-us><head><meta charset=utf-8><meta http-equiv=x-ua-compatible content="IE=edge"><title>Database of filament spools info</title><meta name=description content="Describe your website"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=stylesheet href=https://www.onlyspoolz.com/css/bootstrap.min.css><link rel=stylesheet href="//fonts.googleapis.com/css?family=Roboto:400,300,700,400italic"><link rel=stylesheet href=https://www.onlyspoolz.com/css/font-awesome.min.css><link rel=stylesheet href=https://www.onlyspoolz.com/css/owl.carousel.css><link rel=stylesheet href=https://www.onlyspoolz.com/css/owl.theme.css><link href=https://www.onlyspoolz.com/css/style.default.css rel=stylesheet id=theme-stylesheet><!--[if lt IE 9]><script src=https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js></script>
+<script src=https://oss.maxcdn.com/respond/1.4.2/respond.min.js></script><![endif]--><link href=https://www.onlyspoolz.com/css/custom.css rel=stylesheet><link rel="shortcut icon" href=https://www.onlyspoolz.com/img/favicon.png><link href=https://www.onlyspoolz.com/about/index.xml rel=alternate type=application/rss+xml title="Database of filament spools info"></head><body><div id=all><div class=container-fluid><div class="row row-offcanvas row-offcanvas-left"><div id=sidebar class="col-xs-6 col-sm-4 col-md-3 sidebar-offcanvas"><div class=sidebar-content><h1 class=sidebar-heading><a href=https://www.onlyspoolz.com/>Database of filament spools info</a></h1><p class=sidebar-p>OnlySpoolz. Unrolled and Unplugged</p><ul class=sidebar-menu><li><a href=https://www.onlyspoolz.com/portfolio/>Home</a></li><li><a href=https://www.onlyspoolz.com/about/>About and contributing</a></li><li><a href=https://www.onlyspoolz.com/contact/>Get in touch</a></li></ul><p class=social><a href=https://github.com/jtrmal/spoolz data-animate-hover=pulse class=external><i class="fa fa-github"></i></a></p><div class=copyright><p class=credit>public domain |
 Template by <a href=https://bootstrapious.com/free-templates class=external>Bootstrapious.com</a>
-& ported to Hugo by <a href=https://github.com/kishaningithub>Kishan B</a>
-</p>
-</div>
-</div>
-</div>
-<div class="col-xs-12 col-sm-8 col-md-9 content-column white-background">
-<div class="small-navbar visible-xs">
-<button type=button data-toggle=offcanvas class="btn btn-ghost pull-left"> <i class="fa fa-align-left"> </i>Menu</button>
-<h1 class=small-navbar-heading><a href=https://www.onlyspoolz.com/>Database of filament spools info</a></h1>
-</div>
-<div class=row>
-<div class=col-lg-8>
-<div class=content-column-content>
-<h1>About</h1>
-<h2 id=why>why?</h2>
-<p>These informations are very useful in cases you need to estimate how much filament is left.</p>
-<h2 id=how-to-contribute>how to contribute?</h2>
-<p>First, let me say we are gratefull for you even considering helping the community.
+& ported to Hugo by <a href=https://github.com/kishaningithub>Kishan B</a></p></div></div></div><div class="col-xs-12 col-sm-8 col-md-9 content-column white-background"><div class="small-navbar visible-xs"><button type=button data-toggle=offcanvas class="btn btn-ghost pull-left"> <i class="fa fa-align-left"></i>Menu</button><h1 class=small-navbar-heading><a href=https://www.onlyspoolz.com/>Database of filament spools info</a></h1></div><div class=row><div class=col-lg-8><div class=content-column-content><h1>About</h1><h2 id=why>why?</h2><p>These informations are very useful in cases you need to estimate how much filament is left.</p><h2 id=how-to-contribute>how to contribute?</h2><p>First, let me say we are gratefull for you even considering helping the community.
 Setting time aside in these busy times just for sake of contributing something to
-people you don&rsquo;t know is worth applause.</p>
-<h3 id=tldir-i-know-github-dont-delay-me>tl;dir I know github, don&rsquo;t delay me</h3>
-<p>Create a pull request to the main branch of the repo <a href=https://github.com/jtrmal/spoolz>https://github.com/jtrmal/spoolz</a>
-Your Pull request should contain two files:</p>
-<ul>
-<li>jpeg photo of the spool in spoolz-photos/</li>
-<li>description of the spool in spoolz-text/. Use one of the existing
+people you don&rsquo;t know is worth applause.</p><h3 id=tldir-i-know-github-dont-delay-me>tl;dir I know github, don&rsquo;t delay me</h3><p>Create a pull request to the main branch of the repo <a href=https://github.com/jtrmal/spoolz>https://github.com/jtrmal/spoolz</a>
+Your Pull request should contain two files:</p><ul><li>jpeg photo of the spool in spoolz-photos/</li><li>description of the spool in spoolz-text/. Use one of the existing
 files as a template and rename it. The filename is not very important
 but try to make it self-explanatory. Inside the file, change the
-fields
-<ul>
-<li>title (identification of the spool)</li>
-<li>image (retain the path and add modify the filename itself)</li>
-<li>add text/info after the characters &lsquo;+++&rsquo;</li>
-</ul>
-</li>
-<li>that&rsquo;s it!</li>
-</ul>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-<script src=https://www.onlyspoolz.com/js/jquery.min.js></script>
+fields<ul><li>title (identification of the spool)</li><li>image (retain the path and add modify the filename itself)</li><li>add text/info after the characters &lsquo;+++&rsquo;</li></ul></li><li>that&rsquo;s it!</li></ul></div></div></div></div></div></div></div><script src=https://www.onlyspoolz.com/js/jquery.min.js></script>
 <script src=https://www.onlyspoolz.com/js/bootstrap.min.js></script>
-<script src=https://www.onlyspoolz.com/js/jquery.cookie.js></script>
-<script src=https://www.onlyspoolz.com/js/ekko-lightbox.js></script>
+<script src=https://www.onlyspoolz.com/js/jquery.cookie.js></script><script src=https://www.onlyspoolz.com/js/ekko-lightbox.js></script>
 <script src=https://www.onlyspoolz.com/js/jquery.scrollTo.min.js></script>
 <script src=https://www.onlyspoolz.com/js/masonry.pkgd.min.js></script>
 <script src=https://www.onlyspoolz.com/js/imagesloaded.pkgd.min.js></script>
 <script src=https://www.onlyspoolz.com/js/owl.carousel.min.js></script>
-<script src=https://www.onlyspoolz.com/js/front.js></script>
-</body>
-</html>
+<script src=https://www.onlyspoolz.com/js/front.js></script></body></html>
